--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^12.5.0",
+    "@types/jest": "^28.1.0",
+    "@types/node": "^17.0.38",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
+    "axios": "^0.27.2",
+    "echarts": "^5.3.2",
+    "echarts-for-react": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
+    "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
